<?xml version="1.0"?>
<package format="2">
  <name>nalio</name>
  <version>0.0.0</version>
  <description>NAive Lidar Inertial Odometry</description>
  <maintainer email="cm9999@qq.com">epsavlc</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <test_depend>rosunit</test_depend>

  <export>
  </export>
</package>
